--- a/python/fatcat_web/templates/webcapture_view.html
+++ b/python/fatcat_web/templates/webcapture_view.html
@@ -11,7 +11,7 @@
   {% if webcapture.original_url %}
     <a href="{{ webcapture.original_url }}" style="color: black;"><code>{{ webcapture.original_url }}</code></a>
   {% endif %}
-  <div class="sub header"><code>webcapture {{ webcapture.ident }}</code></div></h1>
+  <span class="sub header"><code>webcapture {{ webcapture.ident }}</code></span></h1>
 </div>
 </div>
 
