--- a/python/fatcat_web/templates/work_view.html
+++ b/python/fatcat_web/templates/work_view.html
@@ -8,7 +8,7 @@
 <div class="one wide column"></div>
 <div class="fifteen wide column">
   <h1 class="ui header">
-  <div class="sub header"><code>work {{ work.ident }}</code></div></h1>
+  <span class="sub header"><code>work {{ work.ident }}</code></span></h1>
 </div>
 </div>
 
