--- a/python/fatcat_web/templates/release_view.html
+++ b/python/fatcat_web/templates/release_view.html
@@ -71,11 +71,11 @@
 
 {% block fullbody %}
 
-<div class="ui stackable mobile reversed grid centered" itemscope itemtype="http://schema.org/ScholarlyArticle">
+<div class="ui stackable mobile reversed grid centered" itemscope itemtype="http://schema.org/ScholarlyArticle" itemid="#release">
 <div class="one wide column"></div>
 <div class="fifteen wide column">
   <h1 class="ui header"><span itemprop="headline"><span itemprop="name">{{ release.title }}</span></span>
-  <div class="sub header"><code>release {{ release.ident }}</code></div></h1>
+  <span class="sub header"><code>release {{ release.ident }}</code></span></h1>
   <p style="font-size: larger;">
   {% if authors != [] %} by {% endif %}
   {% for contrib in authors[:12] %}
@@ -95,17 +95,17 @@
 <div class="ten wide column" style="font-size: 16px;">
 
 <div class="ui accordion">
-<div class="title" itemprop="isPartOf" itemscope itemtype="http://schema.org/Periodical" itemid="#periodical">
+<div class="title" itemprop="isPartOf" itemscope itemtype="http://schema.org/Periodical" itemid="#container">
   {% if release.release_status == 'published' %}
     <i class="dropdown icon"></i>Published in <a href="/container/{{ container.ident }}"><span itemprop="name">{{ container.name }}</span></a>
   {% else %}
     <i class="dropdown icon"></i>Released as a <i>{{ release.release_type }}</i>
-    {% if container %} in <a href="/container/{{ container.ident }}" itemprop="name">{{ container.name }}</a> {% endif %}
+    {% if container %} in <a href="/container/{{ container.ident }}"><span itemprop="name" itemref="#container">{{ container.name }}</span></a> {% endif %}
   {% endif %}
   {% if release.publisher %}
-    by <span itemprop="publisher">{{ release.publisher }}</span>
+    by <span itemprop="publisher" itemref="#container">{{ release.publisher }}</span>
   {% endif %}
-</div><div class="content" itemscope itemtype="http://schema.org/Periodical" itemid="#periodical">
+</div><div class="content" itemscope itemtype="http://schema.org/Periodical" itemid="#container">
   <table class="ui definition single line fixed compact small collapsing unstackable table">
   <tbody>
     {% if container != None and container.issnl != None %}
@@ -162,7 +162,7 @@
 <tbody>
 {% for contrib in release.contribs %}
   <tr><td class="collapsing">{% if contrib.index or contrib.index == 0 %} {{ contrib.index + 1 }}{% endif %}
-      <td><span itemprop="author">
+      <td><span itemprop="author" itemref="#release">
       {% if contrib.creator_id %}
         <a href="/creator/{{contrib.creator_id}}">{{ contrib.raw_name or 'unknown' }}</a> 
       {% else %}
@@ -323,10 +323,10 @@
     <b>Status</b> &nbsp; <code>{{ release.release_status or 'unknown' }}</code><br>
   {% endif %}
   {% if release.release_date %}
-    <meta itemprop="datePublished" content="{{ release.release_date }}">
+    <meta itemprop="datePublished" itemref="#release" content="{{ release.release_date }}">
     <b>Date</b> &nbsp; {{ release.release_date }}<br>
   {% elif release.release_year %}
-    <meta itemprop="datePublished" content="{{ release.release_year }}">
+    <meta itemprop="datePublished" itemref="#release" content="{{ release.release_year }}">
     <b>Year</b> &nbsp; {{ release.release_year }}<br>
   {% endif %}
   </div>
@@ -335,7 +335,7 @@
 {% if release.doi or release.pmid or release.pmcid or release.wikidata_qid %}
 <div class="ui segment attached" style="word-wrap: break-word;">
 {% if release.doi %}
-  <b>DOI </b> &nbsp;<a href="https://doi.org/{{ release.doi }}" title="{{ release.doi }}" itemprop="sameAs">{{ release.doi }}</a><br>
+  <b>DOI </b> &nbsp;<a href="https://doi.org/{{ release.doi }}" title="{{ release.doi }}" itemprop="sameAs" itemref="#release" >{{ release.doi }}</a><br>
 {% endif %}
 {% if release.pmid != None %}
   <b>PubMed</b> <a href="https://www.ncbi.nlm.nih.gov/pubmed/{{ release.pmid }}">&nbsp;<code>{{ release.pmid }}</code></a><br>
@@ -413,15 +413,15 @@
     <a href="https://openlibrary.org/search?isbn={{ release.isbn13 }}">Open Library</a><br>
     <a href="http://www.worldcat.org/search?q=bn%3A{{ release.isbn13 }}">Worldcat</a><br>
   {% else %}
-    <a href="http://www.worldcat.org/search?qt=worldcat_org_art&q={{ release.title }}">Worldcat</a><br>
+    <a href="http://www.worldcat.org/search?qt=worldcat_org_art&q={{ release.title|urlencode }}">Worldcat</a><br>
   {% endif %}
   {% if release.doi %}
   <a href="https://api.crossref.org/v1/works/http://dx.doi.org/{{ release.doi }}">Crossref Metadata</a> (via API)<br>
   {% endif %}
-  <a href="https://www.wikidata.org/w/index.php?search={{ release.title }}">wikidata.org</a><br>
-  <a href="https://core.ac.uk/search?q={{ release.title }}">CORE.ac.uk</a><br>
-  <a href="https://www.semanticscholar.org/search?q={{ release.title }}">Semantic Scholar</a> (CS, neuro)<br>
-  <a href="https://scholar.google.com/scholar?q={{ release.title }}">Google Scholar</a><br>
+  <a href="https://www.wikidata.org/w/index.php?search={{ release.title|urlencode  }}">wikidata.org</a><br>
+  <a href="https://core.ac.uk/search?q={{ release.title|urlencode  }}">CORE.ac.uk</a><br>
+  <a href="https://www.semanticscholar.org/search?q={{ release.title|urlencode  }}">Semantic Scholar</a> (CS, neuro)<br>
+  <a href="https://scholar.google.com/scholar?q={{ release.title|urlencode  }}">Google Scholar</a><br>
 </div>
 </div>
 
