expose bibtex and citeproc; revert /unstable/ prefixes

--- a/python/fatcat_web/templates/stats.html
+++ b/python/fatcat_web/templates/stats.html
@@ -3,7 +3,7 @@
 
 <h1>Stats</h1>
 
-You can also fetch these numbers <a href="./unstable/stats.json">as JSON</a>.
+You can also fetch these numbers <a href="./stats.json">as JSON</a>.
 
 <h3>Changelog</h3>
 
