--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -125,9 +125,12 @@ indexing (aka, linking together of pre-prints and final copies).
 <tr><td><b>File Set</b>
         <br>datasets, suplementary materials
 {% if config.FATCAT_DOMAIN == 'fatcat.wiki' %}
+    <td>
+    <td><a href="/fileset/ho376wmdanckpp66iwfs7g22ne">Dataset</a>
 {% else %}
     <td>
-    <td><a href="/fileset/aaaaaaaaaaaaaztgaaaaaaaaai">Dummy</a>
+    <td><a href="/fileset/ho376wmdanckpp66iwfs7g22ne">Dataset</a> (prod)
+        <br><a href="/fileset/aaaaaaaaaaaaaztgaaaaaaaaai">Dummy</a>
         <br><a href="/fileset/aaaaaaaaaaaaaztgaaaaaaaaam">Realistic</a>
 {% endif %}
     <td>
