info@ => webservices@archive.org

--- a/python/fatcat_web/templates/about.html
+++ b/python/fatcat_web/templates/about.html
@@ -16,7 +16,7 @@ web archives, repositories, and the public web.
 href="https://guide.{{ config.FATCAT_DOMAIN }}/">The Guide</a>.
 
 <p>Feedback and queries can be directed to
-<b><a href="mailto:info@archive.org">info@archive.org</a></b>.
+<b><a href="mailto:webservices@archive.org">webservices@archive.org</a></b>.
 
 <h3>Goals and Features</h3>
 
